# spawn

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
cloud/: dev-server.js  worker.js  wrangler.toml
docs/: HOW-IT-WORKS.md  index.html  mesh-protocol.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
templates/ascii-world/: .paperclip.yaml  COMPANY.md  README.md
templates/ascii-world/agents/ceo/: AGENTS.md
templates/ascii-world/agents/engineer/: AGENTS.md
templates/ascii-world/projects/agent-dashboard/: PROJECT.md
templates/ascii-world/projects/paperclip-integration/: PROJECT.md
templates/ascii-world/projects/pxos-core/: PROJECT.md
templates/ascii-world/projects/visual-intelligence/: PROJECT.md
templates/ascii-world/tasks/asc-1/: TASK.md
templates/ascii-world/tasks/asc-10/: TASK.md
templates/ascii-world/tasks/asc-2/: TASK.md
templates/ascii-world/tasks/asc-3/: TASK.md
templates/ascii-world/tasks/asc-4/: TASK.md
templates/ascii-world/tasks/asc-5/: TASK.md
templates/ascii-world/tasks/asc-6/: TASK.md
templates/ascii-world/tasks/asc-7/: TASK.md
templates/ascii-world/tasks/asc-8/: TASK.md
templates/ascii-world/tasks/asc-9/: TASK.md
templates/geometry-os/: .paperclip.yaml  COMPANY.md  README.md
templates/geometry-os/agents/ceo/: AGENTS.md
templates/geometry-os/agents/rust-engineer/: AGENTS.md
templates/geometry-os/projects/phase-1-the-machine-runs/: PROJECT.md
ui/: index.html  main.js  style.css
(+33 files in other folders)
